# elliptec

./: .pylintrc  .readthedocs.yaml  FUNDING.yml  README.md  codecov.yml  pyproject.toml
.github/workflows/: publish.yml  ruff-check.yml  tests.yml
docs/source/: conf.py  index.rst
elliptec/: __init__.py  cmd.py  controller.py  devices.py  errcodes.py  errors.py  linear.py  motor.py  rotator.py  shutter.py  slider.py  tools.py
scripts/: pypi.txt
src/elliptec/: __init__.py  cmd.py  continuous.py  controller.py  devices.py  errcodes.py  errors.py  iris.py  linear.py  motor.py  rotator.py  scan.py  shutter.py  slider.py  tools.py
tests/: conftest.py  test_controller.py  test_devices_mock.py  test_rotator.py  test_scan.py  test_unit.py
